# AUNN

./: .gitignore  MNIST.ipynb  MNIST_alternative.ipynb  MNIST_alternative_2.ipynb  MNIST_experiment.ipynb  MNIST_experiment_sequential.ipynb  README.md  main.ipynb  misc.ipynb  misc_debug.ipynb  mixer.ipynb  pyproject.toml  random_sequence.ipynb  random_sequence_rff-embeds.ipynb  random_sequence_sequential.ipynb  requirements.txt  shakespeare.ipynb  tiny_shakespeare.ipynb
data/shakespeare/: prep.py
data/simple_stories/: prep_stories.py
experiments/01-sequence/: README.md  sequence.ipynb
experiments/02-shakespeare/: shakespeare.ipynb
experiments/03-rff_embeddings/: random_sequence_rff.ipynb  rff_embeddings.ipynb
experiments/04-mnist/: MNIST_continuous.ipynb
experiments/05-mlp_mixer/: mixer.ipynb
experiments/06-inductive_bias/: model.py  train.py
experiments/06-inductive_bias/06.1-joined_parts/: dataloader.py  train.py
experiments/06-inductive_bias/06.2-end_to_end/: model.py  train.py
experiments/07-aux_loss/: model.py  train.py
experiments/08-weird_rnn/: README.md  model.py  train.py
experiments/09-mem_embeds/: README.md  dataloader.py  model.py  test.py  test_results.md  train.py
experiments/09-mem_embeds/toy_example/: test.py  test_results.md
failed/: MNIST_sequential.ipynb  checkpoint_seq_1.pth  random_sequential.ipynb
mixer/: checkpoint.pth
mnist/: checkpoint.pth  checkpoint_1000ex.pth  checkpoint_2000ex.pth
sequence/: checkpoint.pth  checkpoint_epoch_500.pth  checkpoint_sequential.pth
shakespeare/checkpoints/aunn/: checkpoint.pth
(+2 files in other folders)
