[project]
name = "AUNN"
version = "0.1.0"
description = "AUNN Experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.5.0",
    "dotenv>=0.9.9",
    "einops>=0.8.0",
    "jupyter",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "sacrebleu>=2.5.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.0",
    "transformers>=4.51.0",
]